--- a/FinAssistAndroid/app/src/main/AndroidManifest.xml
+++ b/FinAssistAndroid/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.techclutch.finassist">
 
+    <uses-feature android:name="android.hardware.camera"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
