--- a/FinAssistAndroid/local.properties
+++ b/FinAssistAndroid/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 29 11:15:34 SGT 2017
-sdk.dir=C\:\\Users\\Joshua\\AppData\\Local\\Android\\Sdk
+#Sat Jul 29 21:01:20 SGT 2017
+sdk.dir=C\:\\Users\\Arman\\AppData\\Local\\Android\\Sdk
