initial for document upload

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:label="@string/title_activity_home_questionaire"
             android:theme="@style/AppTheme" />
         <activity android:name=".forms.HomeFormActivity"></activity>
+        <activity android:name=".uploaddocuments.UploadDocumentActivity"></activity>
     </application>
 
 </manifest>
