--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".LandingActivity"
             android:label="@string/title_activity_landing"
@@ -22,7 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".banktypes.BankTypeActivity"></activity>
+        <activity android:name=".banktypes.BankTypeActivity" />
+        <activity
+            android:name=".questionaires.HomeQuestionaireActivity"
+            android:label="@string/title_activity_home_questionaire"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".forms.HomeFormActivity"></activity>
     </application>
 
 </manifest>
