fixed data in bank type

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,10 @@
         <activity android:name=".banktypes.BankTypeActivity" />
         <activity
             android:name=".questionaires.HomeQuestionaireActivity"
-            android:label="@string/title_activity_home_questionaire"
-            android:theme="@style/AppTheme" />
+            android:label="@string/title_activity_home_questionaire" />
         <activity android:name=".forms.HomeFormActivity" />
         <activity android:name=".uploaddocuments.UploadDocumentActivity" />
 		<activity android:name=".bankfeedbacks.BankTentativeFeedbackActivity"></activity>
-		<activity android:name=".scanmykad.ScanMyKadActivity"></activity>       
     </application>
 
 </manifest>
