--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,14 +17,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LandingActivity"
-            android:label="@string/app_name"
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login">
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LandingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
         </activity>
         <activity android:name=".banktypes.BankTypeActivity" />
         <activity
@@ -28,6 +37,7 @@
         <activity android:name=".forms.HomeFormActivity" />
         <activity android:name=".uploaddocuments.UploadDocumentActivity" />
 		<activity android:name=".bankfeedbacks.BankTentativeFeedbackActivity"></activity>
+		<activity android:name=".scanmykad.ScanMyKadActivity"></activity>       
     </application>
 
 </manifest>
