--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".main.LoginActivity"
             android:label="@string/app_name">
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LandingActivity"
+            android:name=".main.LandingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
